...
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                    children: [
                      Container(
                          width: widget.width*0.19,
                          child: TextField(
                            key: Key("Pressure"),
                            textAlign: TextAlign.center,
                            controller: valueTF,
                            style: TextStyle(
                                fontWeight: FontWeight.bold,
                                fontSize: widget.width*0.073
                            ),
...
